fixed question style issue in js -changed to innerHtml and wrapped in span

--- a/assets/style.css
+++ b/assets/style.css
@@ -52,6 +52,11 @@ p {
     font-weight: bold;
 }
 
+#questionsDiv span {
+    font-size: x-large;
+    font-weight: bold;
+}
+
 #currentTime {
     float: right;
     color: red;
